--- a/static/style.css
+++ b/static/style.css
@@ -1,130 +1,54 @@
-html{
-	height: 100%;
+body {
+	font-family: Arial, sans-serif;
 	margin: 0;
+	padding: 0;
+	background-color: #1a1a1a;
+}
+.container {
+	max-width: 500px;
+	margin: 50px auto;
+	background-color: #fff;
+	border-radius: 8px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-body{
-	font-family: Arial, Helvetica,sans-serif;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-	height: 100%;
+h1 {
+	background-color: #3a3a3a;
+	font-family: Arial, sans-serif;
+	text-align: center;
+	padding: 30px;
+	color: white;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+}
+form {
+	padding: 30px;
+	font-family: Arial, sans-serif;
 	display: flex;
 	flex-direction: column;
-}
-
-/* Website Title */
-.container{
-    padding: 30px;
-	position:relative;
-	background: linear-gradient(45deg, #161616, #383436, #161616);
-	background-size: 500% 500%;
-	animation: change-gradient 10s ease-in-out infinite;
-}
-@keyframes change-gradient {
-	0%{
-		background-position: 0 50%;
-	}
-	50%{
-		background-position: 100% 50%;
-	}
-	100%{
-		background-position: 0 50%;
-	}
-}
-
-.container-heading{
-    margin: 0;
-}
-
-.heading_font{
-    color: #ffffff;
-	font-family: 'Arial';
-	font-size: 35px;
-	font-weight: normal;
-}
-
-
-/* Text Area */
-.ml-container{
-    margin: 30px 0;
-	flex: 1 0 auto;
-
-}
-
-.form {
-	text-align: center;
-	width: 250px;
-	height: 25px;
-	margin-bottom: 5px;
 	
 }
-
-input[type=text], select {
-    width:60%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid black;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
 label {
-	width: 200px;
-	font-weight: bold;
-	text-align: center;
-	float: left;
-    margin-top: 1rem;
-    margin-left: 15rem;
-    
-		
-  }
-
-/* Predict Button */
-.my-cta-button{
-	background: #f9f9f9;
-   	border: 2px solid #000000;
-    border-radius: 1000px;
-    box-shadow: 3px 3px #8c8c8c;
-	margin-top: 10px;
-    padding: 10px 36px;
-    color: #000000;
-    display: inline-block;
-    text-align: center;
-    font-family: 'Arial';   
+	margin-bottom: 8px;
 }
-
-.my-cta-button:hover{
-    color: #141414;
-    border: 2px solid #46424b;
+input, select {
+	padding: 10px;
+	margin-bottom: 15px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
 }
-
-.my-cta-button:active{
-    box-shadow: 0 0;
+button {
+	padding: 10px;
+	background-color: #4CAF50;
+	color: white;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
-
-/* Contact */
-.contact-icon{
-	color: #ffffff;
-	padding: 7px;
-}
-
-.contact-icon:hover{
-	color: #8c8c8c;
-}
-
-/* Result */
-.results{
-    padding: 30px 0 0;
-	flex: 1 0 auto;
-}
-
-.danger{
-    color: #ff0000;
-}
-
-.safe{
-    color: green;
+.result {
+	font-family: Arial, sans-serif;
+	padding: 30px;
+	background-color: #eaeaea;
+	border-radius: 4px;
 }
