added database connectivity

--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
                 {% endif %}
                 <hr>
                 {% if result==1 %}
-                    <p>Prediction: Oops! You have Chances of Heart Disease.</p>
+                    <p>Prediction: Oops! You have Chances of Heart Disease. Please consult your doctor.</p>
                 {% elif result==0 %}
                     <p>Prediction: Great! You DON'T have chances of a Heart Disease.</p>
                 {% endif %}
